--- a/intro.qmd
+++ b/intro.qmd
@@ -62,7 +62,6 @@ flowchart LR
 
 In a research study, **both** descriptive and inferential statistics are commonly used. First, researchers present descriptive statistics (e.g., demographic data, baseline characteristics) to provide a clear snapshot of the sample. Then, inferential statistics are applied to test hypotheses and draw conclusions about the broader population from which the sample was drawn.
 
-
 ## Talking about data
 
 ### The "Age of data"
@@ -73,8 +72,7 @@ We are living in the "Age of Data", where every day, an astonishing 2.5 quintill
 
 A second example is chatbots, which are designed to simulate conversations with users. ELIZA (1966) was one such program. Its famous "DOCTOR" script emulated a psychotherapist by rephrasing user statements as questions. Modern chatbots, such as ChatGPT and Gemini, are large language models trained on vast datasets using deep learning techniques. These models are capable of understanding and generating human-like text, effectively responding to a wide range of user queries.
 
-![The most famous scenario, “DOCTOR”, simulated a psychotherapist of the Rogerian school.](images/eliza.png){#fig-eliza fig-align="center" width=75%}
-
+![The most famous scenario, “DOCTOR”, simulated a psychotherapist of the Rogerian school.](images/eliza.png){#fig-eliza fig-align="center" width="75%"}
 
 ### Structure of data
 
@@ -86,10 +84,9 @@ There are three main data structures:
 
 -   **Unstructured data** refer to information that lacks a predefined format or organization, such as open text (e.g., social media posts), images, videos, and other forms of multimedia.
 
-In this course, we use data organized in a structured format, such as spreadsheets. Tabular data refer to data organized in a table with rows and columns. Each row represents an observation (or record), corresponding to a statistical unit in the dataset. The columns represent the variables (or characteristics) of interest.
-Cells are the individual units where rows and columns intersect. Each cell contains a data value corresponding to the observation for that row and the variable for that column.
+In this course, we use data organized in a structured format, such as spreadsheets. Tabular data refer to data organized in a table with rows and columns. Each row represents an observation (or record), corresponding to a statistical unit in the dataset. The columns represent the variables (or characteristics) of interest. Cells are the individual units where rows and columns intersect. Each cell contains a data value corresponding to the observation for that row and the variable for that column.
 
-![A typical excel spreadsheet with row and columns.](images/datable.png){#fig-datable fig-align="center" width=85%}
+![A typical excel spreadsheet with row and columns.](images/datable.png){#fig-datable fig-align="center" width="85%"}
 
 ### Sources of social and health data
 
@@ -109,7 +106,6 @@ Data in the social and health sciences refers to the information collected and a
 
 -   **Biobanks:** ![](images/biobank_icon.png){width="35" height="33"} Biobanks store biological samples (e.g., blood, tissue) along with health and lifestyle data, enabling research into the intersections of genetics, environment, and social factors.
 
-
 ### From data to knowledge and decisions
 
 Social, behavioral, and biomedical **data** can be transformed into **information**. This information can evolve into **knowledge** when social scientists and stakeholders interpret and understand it, allowing them to make **informed decisions**, shape policies, and implement interventions that address societal and health-related challenges more effectively.
@@ -117,5 +113,34 @@ Social, behavioral, and biomedical **data** can be transformed into **informatio
 ![From data to knowledge and action.](images/info.png){#fig-info width="90%"}
 
 
-## Variables
+## Social Statistics
 
+Social statistics is a field of statistics applied in the social sciences to study social phenomena and trends. It employs various statistical methods of data collection, such as censuses, social surveys, and administrative records. These methods are commonly used by government agencies, institutions, and researchers to analyze data related to social life, human behavior, and society as a whole.
+
+The primary goal of social statistics is to provide objective, quantitative evidence that aids in understanding and interpreting social issues, ultimately informing the development of appropriate social policies.
+
+Let's take a look at some examples.
+
+**EXAMPLE 1**
+
+![](images/elstat_icon.png){style="float: left; margin-right: 20px;" fig-align="left" width="100"}
+
+Through its quarterly report *Greece in Figures*, the Hellenic Statistical Authority (ELSTAT) presents current and detailed statistical insights into Greece's population, social structure, and economy.
+
+An important socio-economic indicator at country level is the percentage of people at risk of poverty or social exclusion. Poverty and social exclusion severely disrupt the lives of those affected, perpetuating a cycle of disadvantage that can last for generations. This cycle not only limits personal growth but also poses significant challenges to social cohesion and economic stability within communities.
+
+![The percentage of people at risk of poverty or social exclusion in Eurozone. Greece (EL) is highlihgted.](images/poverty.png){#fig-poverty width="70%"}
+
+In 2023, over a quarter of the Greek population (EL) is at risk of poverty or social exclusion, with a percentage of 26.1%, ranking Greece among the highest in the Eurozone, just below Spain (ES) at 26.5%.
+
+ 
+
+**EXAMPLE 2**
+
+
+
+
+
+
+
+## Variables
