--- a/intro.qmd
+++ b/intro.qmd
@@ -70,9 +70,17 @@ In a research study, **both** descriptive and inferential statistics are commonl
 
 We are living in the "Age of Data", where every day, an astonishing 2.5 quintillion ($10^{18}$) bytes of data are generated worldwide. An example of how this era is transforming scientific research can be seen in large-scale multi-ancestry genome-wide association studies (GWAS), which are used to uncover the genetic basis of complex conditions like anxiety disorders. In a recent study, researchers analyzed genomic data from more than 1.2 million individuals across diverse populations, identifying more than 100 genes associated with stress and anxiety [@friligkou2024].
 
-A second example is chatbots, which are designed to simulate conversations with users. ELIZA (1966) was one such program. Its famous "DOCTOR" script emulated a psychotherapist by rephrasing user statements as questions. Modern chatbots, such as ChatGPT and Gemini, are large language models trained on vast datasets using deep learning techniques. These models are capable of understanding and generating human-like text, effectively responding to a wide range of user queries.
+A second example is chatbots, which are designed to simulate conversations with users. ELIZA (1966) was one such program. Its famous "DOCTOR" script emulated a psychotherapist by rephrasing user statements as questions (@fig-eliza). Modern chatbots, such as ChatGPT, Gemini and Copilot, are large language models trained on **vast datasets** using deep learning techniques. These models are capable of understanding and generating human-like text, effectively responding to a wide range of user queries.
 
-![The most famous scenario, “DOCTOR”, simulated a psychotherapist of the Rogerian school.](images/eliza.png){#fig-eliza fig-align="center" width="75%"}
+![The most famous scenario simulated a psychotherapist of the Rogerian school.](images/eliza.png){#fig-eliza width="75%" fig-alt="The most famous scenario simulated a psychotherapist of the Rogerian school."}
+
+
+ 
+
+Next is a YouTube video that explores the history of Eliza.
+
+{{< video https://www.youtube.com/watch?v=zhxNI7V2IxM title="The History of ELIZA">}}
+
 
 ### Structure of data
 
@@ -84,9 +92,9 @@ There are three main data structures:
 
 -   **Unstructured data** refer to information that lacks a predefined format or organization, such as open text (e.g., social media posts), images, videos, and other forms of multimedia.
 
-In this course, we use data organized in a structured format, such as spreadsheets. Tabular data refer to data organized in a table with rows and columns. Each row represents an observation (or record), corresponding to a statistical unit in the dataset. The columns represent the variables (or characteristics) of interest. Cells are the individual units where rows and columns intersect. Each cell contains a data value corresponding to the observation for that row and the variable for that column.
+In this course, we use data organized in a structured format, such as spreadsheets. Tabular data refer to data organized in a table with rows and columns (@fig-datable). Each row represents an observation (or record), corresponding to a statistical unit in the dataset. The columns represent the variables (or characteristics) of interest. Cells are the individual units where rows and columns intersect. Each cell contains a data value corresponding to the observation for that row and the variable for that column.
 
-![A typical excel spreadsheet with row and columns.](images/datable.png){#fig-datable fig-align="center" width="85%"}
+![A typical excel spreadsheet with row and columns.](images/datable.png){#fig-datable fig-align="center" width="85%" fig-alt="A typical excel spreadsheet with row and columns."}
 
 ### Sources of social and health data
 
@@ -108,10 +116,9 @@ Data in the social and health sciences refers to the information collected and a
 
 ### From data to knowledge and decisions
 
-Social, behavioral, and biomedical **data** can be transformed into **information**. This information can evolve into **knowledge** when social scientists and stakeholders interpret and understand it, allowing them to make **informed decisions**, shape policies, and implement interventions that address societal and health-related challenges more effectively.
+Social, behavioral, and biomedical **data** can be transformed into **information**. This information can evolve into **knowledge** when social scientists and stakeholders interpret and understand it, allowing them to make **informed decisions**, shape policies, and implement interventions that address societal and health-related challenges more effectively (@fig-info).
 
-![From data to knowledge and action.](images/info.png){#fig-info width="90%"}
-
+![From data to knowledge and action.](images/info.png){#fig-info width="90%" fig-alt="From data to knowledge and action."}
 
 ## Social Statistics
 
@@ -121,7 +128,7 @@ The primary goal of social statistics is to provide objective, quantitative evid
 
 Let's take a look at some examples.
 
-**EXAMPLE 1**
+**Example 1**
 
 ![](images/elstat_icon.png){style="float: left; margin-right: 20px;" fig-align="left" width="100"}
 
@@ -131,15 +138,8 @@ An important socio-economic indicator at country level is the percentage of peop
 
 ![The percentage of people at risk of poverty or social exclusion in Eurozone. Greece (EL) is highlihgted.](images/poverty.png){#fig-poverty width="70%"}
 
-In 2023, over a quarter of the Greek population was at risk of poverty or social exclusion, with a percentage of 26.1%, ranking Greece (EL) among the highest in the Eurozone, just below Spain (ES) at 26.5%.
- 
+In 2023, over a quarter (26.1%) of the Greek population was at risk of poverty or social exclusion, ranking Greece (EL) among the highest in the Eurozone, just behind Spain (ES; 26.5%), as shown in @fig-poverty.  
 
-**EXAMPLE 2**
-
-
-
-
-
-
+**Example 2**
 
 ## Variables
