--- a/intro.qmd
+++ b/intro.qmd
@@ -70,14 +70,14 @@ In a research study, **both** descriptive and inferential statistics are commonl
 
 We are living in the "Age of Data", where every day, an astonishing 2.5 quintillion ($10^{18}$) bytes of data are generated worldwide. An example of how this era is transforming scientific research can be seen in large-scale multi-ancestry genome-wide association studies (GWAS), which are used to uncover the genetic basis of complex conditions like anxiety disorders. In a recent study, researchers analyzed genomic data from more than 1.2 million individuals across diverse populations, identifying more than 100 genes associated with stress and anxiety [@friligkou2024].
 
-A second example is chatbots, which are designed to simulate conversations with users. ELIZA (1966) was one such program. Its famous "DOCTOR" script emulated a psychotherapist by rephrasing user statements as questions (@fig-eliza). Modern chatbots, such as ChatGPT, Gemini and Copilot, are large language models trained on **vast datasets** using deep learning techniques. These models are capable of understanding and generating human-like text, effectively responding to a wide range of user queries.
+A second example is chatbots, which are designed to simulate conversations with users. ELIZA (1966) was one such program. Its famous "DOCTOR" script emulated a psychotherapist by rephrasing user statements as questions (@fig-eliza). Modern chatbots, such as ChatGPT, Gemini and Copilot, are large language models trained on **vast amounts of text data** (e.g., books, articles, websites, and user-generated content), hence the term "large". Using deep learning techniques, these models aim to understand and generate human-like text, effectively responding to a wide range of user queries.
 
 ![The most famous scenario simulated a psychotherapist of the Rogerian school.](images/eliza.png){#fig-eliza width="75%" fig-alt="The most famous scenario simulated a psychotherapist of the Rogerian school."}
 
 
  
 
-Next is a YouTube video that explores the history of Eliza.
+Next is a YouTube video that explores the history of Eliza and chatbots.
 
 {{< video https://www.youtube.com/watch?v=zhxNI7V2IxM title="The History of ELIZA">}}
 
@@ -132,7 +132,7 @@ Let's take a look at some examples.
 
 ![](images/elstat_icon.png){style="float: left; margin-right: 20px;" fig-align="left" width="100"}
 
-Through its quarterly report *Greece in Figures*, the Hellenic Statistical Authority (ELSTAT) presents current and detailed statistical insights into Greece's population, social structure, and economy.
+Through its quarterly report *Greece in Figures*, the Hellenic Statistical Authority ([ELSTAT](https://www.statistics.gr/en/greece-in-figures)) presents current and detailed statistical insights into Greece's population, social structure, and economy.
 
 An important socio-economic indicator at country level is the percentage of people at risk of poverty or social exclusion. Poverty and social exclusion severely disrupt the lives of those affected, perpetuating a cycle of disadvantage that can last for generations. This cycle not only limits personal growth but also poses significant challenges to social cohesion and economic stability within communities.
 
@@ -141,5 +141,30 @@ An important socio-economic indicator at country level is the percentage of peop
 In 2023, over a quarter (26.1%) of the Greek population was at risk of poverty or social exclusion, ranking Greece (EL) among the highest in the Eurozone, just behind Spain (ES; 26.5%), as shown in @fig-poverty.  
 
 **Example 2**
+
+![](images/violence.png){style="float: left; margin-right: 20px;" fig-align="left" width="100"}
+
+
+Violence against women and gender inequalities represent critical public health and social challenges that demand urgent attention. This report, based on data from 2018 and published in May 2021, created by the World Health Organization, the London School of Hygiene and Tropical Medicine and the South African Medical Research Council presents data on the prevalence of violence against women.
+
+The report found that the global lifetime prevalence of intimate partner
+violence among ever-partnered women was **30.0%** (95% CI = 27.8% to 32.2%).
+
+::: content-box-purple
+It is important to note that this estimated percentage (30%) is accompanied by a confidence interval (CI), which indicates a range from 27.8% to 32.2%. This interval reflects the precision of the estimate, and we will discuss it further in the subsequent sections of the course.
+:::
+
+The report also mentioned that the prevalence of intimate partner
+violence among ever-partnered women was highest in the WHO African, Eastern Mediterranean and South-East Asia Regions with an estimated prevalence of approximately 37%. In contrast, the prevalence was lower in the high-income regions of America (23%) and the European and Western Pacific Regions (25%).
+This indicates that the prevalence of violence against women can differ significantly among regions, influenced by a range of socio-economic factors. In statistical terms, this suggests that there is a large **variance** in the data.
+
+
+
+![](images/kirabati.png){style="float: left; margin-right: 20px;" fig-align="left" width="300"}
+
+
+The report also references the [Kirabati case](https://iris.who.int/handle/10665/207758); a country consisting of 33 islands situated in the central Pacific Ocean. The family health study revealed an alarming prevalence of violence against women in Kiribati, with 68% of women aged 15–49 who had been in a relationship reporting experiences of violence (emotional, physical, and/or sexual) from a partner.
+This finding highlights how social statistics can assist in identifying **rare cases** (extreme values) to raise global concern and prompt immediate action.
+
 
 ## Variables
