--- a/intro.qmd
+++ b/intro.qmd
@@ -167,15 +167,61 @@ This indicates that the prevalence of violence against women can differ signific
 ![](images/kirabati.png){style="float: left; margin-right: 20px;" fig-align="left" width="300"}
 
 
-The report also references the [Kirabati case](https://iris.who.int/handle/10665/207758); a country consisting of 33 islands situated in the central Pacific Ocean. The family health study revealed an alarming prevalence of violence against women in Kiribati, with 68% of women aged 15–49 who had been in a relationship reporting experiences of violence (emotional, physical, and/or sexual) from a partner.
+The report also references the [Kiribati case](https://iris.who.int/handle/10665/207758); a country consisting of 33 islands situated in the central Pacific Ocean. The 
+[Kiribati family health study](https://pacific.unfpa.org/sites/default/files/pub-pdf/Kiribati-Family-Health-and-Support-Study_0.pdf) revealed an alarming prevalence of violence against women in Kiribati, with 68% of women aged 15–49 who had been in a relationship reporting experiences of violence (emotional, physical, and/or sexual) from a partner.
 This finding highlights how social statistics can assist in identifying **rare cases** (extreme values) to raise global concern and prompt immediate action.
-
-
 
 The following YouTube video from *UN Women* is a campaign aimed at raising awareness about violence against women and girls.
 
 {{< video https://www.youtube.com/watch?v=W_ZPHPutN-c title="Ending Violence against women and girls">}}
 
-
+ 
 
 ## Variables
+
+
+### Dependent and independent variables
+
+A **variable** is a quantity or characteristic that is free to vary, or take on different values. Researchers design studies to test whether changes to one or more variables are associated with changes in another variable of interest. 
+
+
+![](images/falls.png){style="float: left; margin-right: 20px;" fig-align="left" width="200"}
+
+For example, if researchers hypothesize that a psychological intervention can help prevent falls in older adults living in the community more effectively than a standard approach, they could create a study to test this hypothesis. Participants would be randomly assigned to one of two groups: the experimental group, which receives the psychological intervention aimed at preventing falls, and the control group, which receives the conventional intervention.
+
+In this study, the type of intervention each participant received (i.e., the psychological intervention vs. the conventional intervention) is the **independent variable** (X), as it is the variable that the researchers manipulate. The **dependent** variable (Y), or the outcome variable, is the  rate of falls over a time period, as it reflects the effect or outcome that the researchers measure to determine whether the intervention has an impact on reducing falls among older adults living in the community.
+
+
+
+::: content-box-yellow
+An **independent variable** (X) is the variable that is changed or controlled in a research study to examine its effect on another variable, which is referred to as the dependent variable (outcome Y).
+
+A **dependent variable** (Y) is the variable that is measured and assessed in a research study and is influenced by the independent variables (Xs) being studied (i.e., it represents the outcome of the experiment).
+
+
+- **Diagram of a bivariable model** 
+
+```{mermaid}
+%%| fig-align: center
+
+flowchart LR
+  A(Independent \nvariable X) -.-> B(Dependent \nvariable Y)
+```
+
+
+
+- **Diagram of multivariable model** 
+
+```{mermaid}
+%%| fig-align: center
+
+flowchart LR
+  A(Independent \nvariable X1) -.-> B(Dependent \nvariable Y)
+  C(Independent \nvariable X2) -.-> B
+  D(Independent \nvariable X3) -.-> B
+```
+
+:::
+
+
+
