--- a/intro.qmd
+++ b/intro.qmd
@@ -166,23 +166,22 @@ The following YouTube video from *UN Women* is a campaign aimed at raising aware
 
 ## Variables
 
-### Dependent and independent variables
+### Independent and dependent and  variables
 
 A **variable** is a quantity or characteristic that is free to vary, or take on different values. Researchers design studies to test whether changes to one or more variables are associated with changes in another variable of interest.
 
 ![](images/falls.png){style="float: left; margin-right: 20px;" fig-align="left" width="200"}
 
-For example, if researchers hypothesize that a psychological intervention can help prevent falls in older adults living in the community more effectively than a standard approach, they could create a study to test this hypothesis. Participants would be randomly assigned to one of two groups: the experimental group, which receives the psychological intervention aimed at preventing falls, and the control group, which receives the conventional intervention.
+For example, if researchers hypothesize that a psychological intervention can help prevent falls in older adults living in the community more effectively than a standard approach, they could create a study to test this hypothesis. Participants would be randomly assigned to one of two groups: the experimental group, which receives the psychological intervention aimed at preventing falls, and the control group, which receives the usual care.
 
-In this example, the type of intervention each participant received (i.e., the psychological intervention vs. the conventional intervention) is the **independent variable** (X), as it is the variable that the researchers manipulate. The **dependent** variable (Y), or the outcome variable, is the rate of falls over a time period, as it reflects the effect or outcome that the researchers measure to determine whether the intervention has an impact on reducing falls among older adults living in the community.
+In this example, the type of intervention each participant received (i.e., the psychological intervention vs. usual care) is the **independent variable** (X), as it is the variable that the researchers manipulate. The **dependent** variable (Y), or the outcome variable, is the rate of falls over a time period, as it reflects the effect or outcome that the researchers measure to determine whether the intervention has an impact on reducing falls among older adults living in the community.
 
 ::: content-box-yellow
-An **independent variable** (X) is the variable that is changed or controlled in a research study to examine its effect on another variable (Y), which is referred to as the dependent variable (outcome).
+An **independent variable** (X) is the variable that is changed or controlled in a research study to examine its effect on another variable (Y), which represents the outcome being measured.
 
-A **dependent variable** (Y) is the variable that is measured and assessed in a research study and is influenced by the independent variables (Xs) being studied (i.e., it represents the outcome of the study).
+A **dependent variable** (Y) is the variable that is measured and assessed in a research study, influenced by the independent variables (Xs) being studied. It represents the outcome of the study.
 
-It is important to note that we can build simple bivariate models or more complex and realistc multivariable models:
-
+It is important to note that we can construct both simple bivariate models and more complex, realistic multivariable models:
 
 -   **Diagram of a Bivariate Model (X → Y)**
 
@@ -192,7 +191,7 @@ In this model, X is assumed to influence or predict Y. It's commonly used to exp
 %%| fig-align: center
 
 flowchart LR
-  A(Independent variable X \ne.g. Psychological Intervention) -.-> B(Dependent variable Y \ne.g. Rate of falls)
+  A(Independent variable X \ne.g. psychological intervention) -.-> B(Dependent variable Y \ne.g. Rate of falls)
 ```
 
 -   **Diagram of Multivariable Model (X1, X2, X3 → Y) **
@@ -210,5 +209,46 @@ flowchart LR
   D(Independent variable X3 \ne.g. balance) -.-> B
 ```
 
+:::
+
+ 
+
+
+### Confounding variable
+
+It is often essential to analyze the association between an independent variable (X) and a dependent variable (Y) while considering confounding variables, which should be controlled to prevent distortion of results.
+
+::: content-box-green
+A confounding variable is defined as one that is related with both the independent and the dependent variables and does not lie on the causal pathway between them.
+:::
+
+For example, consider a study investigating the link between caffeine intake (X) and lung cancer (Y). Without accounting for confounding variables, such as smoking, the results may suggest a misleading association between caffeine and lung cancer that is not truly causal.
+
+![From data to knowledge and action.](images/confounder.png){#fig-confounder width="70%" fig-alt="From data to knowledge and action."}
+
+Smoking may be a potential confounding variable because is:
+
+-   **Related to Caffeine Consumption:** Smokers often consume more caffeine (e.g., through coffee or energy drinks).
+
+-   **Direct Cause of Lung Cancer:** Smoking is a well-established cause of lung cancer and significantly increases the risk of developing the disease.
+
+-   **Not Part of the Causal Pathway:** Smoking does not lie in the causal pathway between caffeine and lung cancer.
+
+
+
+::: {.callout-tip icon="false"}
+## `r fa("comment", fill = "#1DC5CE")` Comment
+
+The causal pathway refers to the sequence of events or mechanisms through which an independent variable influences a dependent variable. It demonstrates how changes in the independent variable lead to changes in the dependent variable, often involving intermediary variables.
+
+```{mermaid}
+%%| fig-align: center
+
+flowchart LR
+  A(Independent variable X \ne.g. exercise) -.-> B(Intermediate variable W \ne.g. release of endorphins)-.->C(Dependent variable Y \ne.g. improved mood)
+```
 
 :::
+
+
+
