--- a/references.bib
+++ b/references.bib
@@ -29,3 +29,18 @@
 	url = {http://dx.doi.org/10.1038/s41588-024-01908-2},
 	langid = {en}
 }
+
+@article{grimes2002,
+	title = {Bias and causal associations in observational research},
+	author = {Grimes, David A and Schulz, Kenneth F},
+	year = {2002},
+	month = {01},
+	date = {2002-01},
+	journal = {The Lancet},
+	pages = {248--252},
+	volume = {359},
+	number = {9302},
+	doi = {10.1016/s0140-6736(02)07451-2},
+	url = {http://dx.doi.org/10.1016/S0140-6736(02)07451-2},
+	langid = {en}
+}
